Displays results in html

--- a/frcscoutingwebsite.html
+++ b/frcscoutingwebsite.html
@@ -2,6 +2,7 @@
 	<body>
 		<p>Team name </p>
 		<p><input id="teamInput" type="text"></p>
+		<p id ="demo"> </p>
 	</body>
 <script src="script.js"></script>
 </html>
