Added Dialog for Scouting teams

--- a/frcscoutingwebsite.html
+++ b/frcscoutingwebsite.html
@@ -3,6 +3,31 @@
 		<p>Team name </p>
 		<p><input id="teamInput" type="text"></p>
 		<p id ="demo"> </p>
+		<button id="scoutTeam" type="button">Scout this team</button>
+		<dialog id ="scoutDialog">
+			<form method="dialog">
+				<p>Bins: </p>
+				<label>Push<input type="checkbox" ></label>
+				<label>Lift<input name = "Lift" type="checkbox" >
+				<label>Flip<input name = "Flip" type="checkbox" ></label>
+				<br>
+				<label>Stack Height <input name = "Stack Height" type="text"></label>
+				<br>
+				<p>Litter: </p>
+				<label>Push<input type="checkbox" ></label>
+				<label>Lift<input name = "Lift" type="checkbox" >
+				<label>Flip<input name = "Flip" type="checkbox" ></label>
+				<br>
+				<label>Stack Height <input name = "Stack Height" type="text"></label>
+				<p>Coopertition: <input id="coopertition" type="checkbox"></p>
+				
+				<menu>
+				<button>Cancel</button>
+				<button>Confirm</button>
+				</menu>
+			</form>
+		</dialog>
+    
 	</body>
 <script src="script.js"></script>
 </html>
